# quick_match

./: LICENCE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/quick_match/: app.py  streamlit_app_runner.py
src/quick_match/functions/: api_functions.py
src/quick_match/webapp/: style.css
